--- a/style.css
+++ b/style.css
@@ -1,50 +1,38 @@
-* {
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-
-body {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #8d99ae;
-}
-
-.container {
-    background-color: #cbc0d3;
-    border-radius: 10px;
-    width: 350px;
-    height: 350px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    background-image: url("img/bg_img1.jpg");
+    background-size: cover;
     text-align: center;
-    box-shadow: 5px 5px 3px #8d99ae, -5px -5px 3px #8d99ae;
 }
 
-.container .field {
-    margin: 7px;
-    padding: 10px;
-    border-radius: 5px;
-    outline: none;
+h1 {
+    color: goldenrod;
 }
 
-.cal-Btn {
-    margin-top: 15px;
-    padding: 10px 15px;
-    border: 1px solid #ffba08;
-    border-radius: 7px;
-    background-color: #ffba08;
-    color: #370617;
-    font-family: sans-serif;
-    font-size: 14px;
+p {
+    color: #023047;
+    font-size: 18px;
+    font-weight: bold;
 }
 
-.cal-Btn:hover {
-    background-color: #e85d04;
+#message {
+    font-style: italic;
+}
+
+button {
+    color: #016f32;
+    width: 150px;
+    height: 50px;
+    background: goldenrod;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: bold;
+    border: none;
+    border-radius: 4px;
+    font-size: 15px;
+}
+
+button:hover {
+    background: #e26d5c;
 }
